CSSWENGxGK/wwwroot/css/register-page.css
.horizontal {
	display:flex;
	justify-content: space-between;
	gap: 40px;
}

.card {
	display: flex;
	flex-direction: column;
	margin: auto;
	padding: 5em 7em;
	background-color: var(--white);
	box-shadow: var(--drop-shadow);
	border-radius: var(--corner-radius);
}

.centered {
	padding: 0px 30px
}

.title {
	font-weight: bolder;
	font-size: var(--font-size-header);
	font-family: var(--font-family);
	color: var(--accent);
	margin-bottom: 0.5em;
}

.textbox {
	max-width: 100%;
	width: 100%;
	outline
}

.textbox > label {
	font-size: var(--font-size-small);
	font-family: var(--font-family);
	color: var(--grey);
	margin-top: 1em;
}

.forminput {
	border-radius: var(--corner-radius);
	font-size: var(--font-size-regular);
	font-family: var(--font-family);
	box-shadow: var(--drop-shadow);
	padding: 5px 10px;
	outline-width: 0;
	background-color: var(--white);
	border: 4px solid var(--white);
	font-family: Colfax; 
	margin-bottom: 0.2em;
	width: 100%;
	box-sizing: border-box;

	transition:all 250ms ease-out;
	transform: scale(1);
}

.forminput:focus {
	border-color: var(--accent);
	box-shadow: var(--drop-shadow);

	outline:none;
	transform: scale(1.01);
	transition:all 50ms ease-out;
}

.button { 
	display: flex; 
}

.button > button {
	font-family: var(--font-family);
	font-size: var(--font-size-regular);
	padding: 0.5em 2em;
	max-width: 100%;
	margin: 0 auto;
	margin-bottom: 1em;
	border: 0px;
	border-radius: var(--corner-radius);
	box-shadow: var(--drop-shadow);
	color: var(--accent);
	background-color: var(--white);
	font-weight: bold;
	outline: 0px solid;

	transition:all 250ms ease-out;
	transform: scale(1);
}

.button > button:hover {
	background-color: var(--accent);
	color: var(--white);
	transition:all 50ms ease-out;
	transform: scale(1);
}

.button > button:active {
	background-color: var(--accent);
	color: var(--white);
	transition:all 10ms ease-out;
	transform: scale(1.1);
}

.register-notify-container{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

.register-notify{
    align-items: center;
    font-size: 16px;
}

.register-checkbox{
	position: absolute;
	opacity: 0;
	cursor: pointer;
	height: 0;
	width: 0;
}

.register-checkbox:hover {
	
}

.link-text {
	display: flex;
}

.link-text > a, .link-text a:visited{
	margin: auto;
	color: var(--black);
	text-decoration: none;
	transition:all 250ms ease-out;
	transform: scale(1);
}

.link-text > a:hover{
	text-decoration: underline;
	transition:all 10ms ease-out;
	transform: scale(1);
}

.link-text > a:active {
	color: var(--accent);
	transition:all 10ms ease-out;
	transform: scale(1);
}

/* For Mobile View */
@media screen and (max-width: 900px) {
	.card {
		padding: 3em 5em;
		width: 100%;
	}

	.centered {
		padding: 0px
	}
	
	.forminput {
		font-size: var(--font-size-small);
	}
}

@media screen and (max-width: 510px) {
	.card {
		padding: 3em 3em;
	}

	.title {
		font-size: var(--font-size-header-small);
	}
	

	.textbox > label {
		font-size: 16px;
		margin-top: 0.5em;
	}
	
	.forminput {
		font-size: var(--font-size-smaller);
	}

	.button > button {
		font-size: var(--font-size-small);
	}
}

